--- a/config/kitty/kitty-colors.conf
+++ b/config/kitty/kitty-colors.conf
@@ -1,32 +1,35 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #FBECD3
-background         #0E0E0F
-cursor             #FBECD3
+foreground         #d0d0d0
+background         #202020
+cursor             #d0d0d0
 
-active_tab_foreground     #0E0E0F
-active_tab_background     #FBECD3
-inactive_tab_foreground   #FBECD3
-inactive_tab_background   #0E0E0F
+# active_tab_foreground     #202020
+# active_tab_background     #d0d0d0
+# inactive_tab_foreground   #d0d0d0
+# inactive_tab_background   #202020
 
-active_border_color   #FBECD3
-inactive_border_color #0E0E0F
-bell_border_color     #100C10
+selection_background  #303030
+selection_foreground  #202020
 
-color0      #373738
-color1		#100C10
-color2		#3C1E1A
-color3		#622F22
-color4		#434646
-color5		#616B64
-color6		#B79661
-color7		#F1DBB8
-color8		#A99981
-color9		#151016
-color10		#502922
-color11		#833E2D
-color12		#595D5D
-color13		#818F85
-color14		#F4C882
-color15		#F1DBB8
+# active_border_color   #C9D3D5
+# inactive_border_color #2C2B28
+# bell_border_color     #222116
+
+color0   #151515
+color1		#ac4142
+color2		#7e8d50
+color3		#e5b566
+color4		#6c99ba
+color5		#9e4e85
+color6		#7dd5cf
+color7		#d0d0d0
+color8		#505050
+color9		#ac4142
+color10		#7e8d50
+color11		#e5b566
+color12		#6c99ba
+color13		#9e4e85
+color14		#7dd5cf
+color15		#f5f5f5
