--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,10 +1,10 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 
 # wallust-colors
-#include kitty-colors.conf 
+include kitty-colors.conf 
 
 font_family Fira Code SemiBold
-font_size 16.0
+font_size 12.0
 bold_font auto
 italic_font auto
 bold_italic_font auto
