--- a/config/hypr/UserConfigs/ENVariables.conf
+++ b/config/hypr/UserConfigs/ENVariables.conf
@@ -2,7 +2,7 @@
 # Environment variables. See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 # Set your defaults here
-#env = EDITOR,vim #default editor
+env = EDITOR,vim #default editor
 
 #environment-variables
 env = CLUTTER_BACKEND,wayland
@@ -29,8 +29,8 @@ env = GDK_SCALE,1
 # NOTE! You must have the hyprcursor version to activate this.
 # If you installed from 26-Dec-2024 and choose GTK theme, then you have it.
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprcursor/
-#env = HYPRCURSOR_THEME,Bibata-Modern-Ice
-#env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,Bibata-Modern-Ice
+env = HYPRCURSOR_SIZE,24
 
 # firefox
 env = MOZ_ENABLE_WAYLAND,1
