--- a/config/hypr/UserConfigs/Monitors.conf
+++ b/config/hypr/UserConfigs/Monitors.conf
@@ -6,7 +6,8 @@
 # Configure your Display resolution, offset, scale and Monitors here, use `hyprctl monitors` to get the info.
 
 # Monitors
-monitor=,preferred,auto,1
+monitor=DP-2, 1920x1080, 0x0, 1
+monitor=HDMI-A-2, 1920x1080, 1920x0, 1
 
 # High Refresh Rate
 monitor=,highrr,auto,1
