--- a/config/hypr/UserConfigs/UserSettings.conf
+++ b/config/hypr/UserConfigs/UserSettings.conf
@@ -26,7 +26,7 @@ general {
 }
 
 input {
-  kb_layout = us
+  kb_layout = fr
   kb_variant =
   kb_model =
   kb_options =
@@ -112,7 +112,7 @@ render {
 
 cursor {
   sync_gsettings_theme = true
-  no_hardware_cursors = false
+  no_hardware_cursors = 2
   enable_hyprcursor = true
   warp_on_change_workspace = 2
   no_warps = true 
