--- a/config/hypr/UserConfigs/WorkspaceRules.conf
+++ b/config/hypr/UserConfigs/WorkspaceRules.conf
@@ -6,10 +6,10 @@
 # https://wiki.hyprland.org/Configuring/Workspace-Rules/
 
 # Assigning workspace to a certain monitor. Below are just examples
-# workspace = 1, monitor:eDP-1
-# workspace = 2, monitor:eDP-1
-# workspace = 3, monitor:eDP-1
-# workspace = 4, monitor:eDP-1
+workspace = 1, monitor:DP-2
+workspace = 2, monitor:DP-2
+workspace = 3, monitor:HDMI-A-2
+workspace = 4, monitor:HDMI-A-2
 # workspace = 5, monitor:DP-2
 # workspace = 6, monitor:DP-2
 # workspace = 7, monitor:DP-2
