--- a/config/hypr/wallust/wallust-hyprland.conf
+++ b/config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(1E1516)
-$foreground = rgb(ACF2F1)
-$color0 = rgb(463C3D)
-$color1 = rgb(181916)
-$color2 = rgb(073122)
-$color3 = rgb(073122)
-$color4 = rgb(0E455E)
-$color5 = rgb(0D942F)
-$color6 = rgb(0DA4A1)
-$color7 = rgb(80E4E2)
-$color8 = rgb(59A09E)
-$color9 = rgb(20211D)
-$color10 = rgb(09422D)
-$color11 = rgb(09422D)
-$color12 = rgb(135C7D)
-$color13 = rgb(11C63F)
-$color14 = rgb(11DAD6)
-$color15 = rgb(80E4E2)
+$background = rgb(2C2B28)
+$foreground = rgb(C9D3D5)
+$color0 = rgb(51504D)
+$color1 = rgb(222116)
+$color2 = rgb(262E29)
+$color3 = rgb(2F545B)
+$color4 = rgb(5F4D3E)
+$color5 = rgb(30575F)
+$color6 = rgb(4B6166)
+$color7 = rgb(A9B8BB)
+$color8 = rgb(768083)
+$color9 = rgb(2E2B1E)
+$color10 = rgb(323E36)
+$color11 = rgb(3F6F79)
+$color12 = rgb(7F6753)
+$color13 = rgb(40747F)
+$color14 = rgb(648188)
+$color15 = rgb(A9B8BB)
