--- a/config/hypr/UserConfigs/UserKeybinds.conf
+++ b/config/hypr/UserConfigs/UserKeybinds.conf
@@ -3,7 +3,7 @@
 # if you think I should replace the Pre-defined Keybinds in ~/.config/hypr/configs/Keybinds.conf , submit an issue or let me know in DC and present me a valid reason as to why, such as conflicting with global shortcuts, etc etc
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more settings and variables
-# See also Laptops.conf for laptops keybinds 
+# See also Laptops.conf for laptops keybinds
 
 $mainMod = SUPER
 $files = thunar
@@ -31,7 +31,7 @@ bind = $mainMod, Z, exec, pypr zoom # Toggle Desktop Zoom
 
 # User Added Keybinds
 bind = $mainMod SHIFT, O, exec, $UserScripts/ZshChangeTheme.sh # Change oh-my-zsh theme
-bindn = ALT_L, SHIFT_L, exec, $scriptsDir/SwitchKeyboardLayout.sh # Change keyboard layout
+# bindn = ALT_L, SHIFT_L, exec, $scriptsDir/SwitchKeyboardLayout.sh # Change keyboard layout
 
 # For passthrough keyboard into a VM
 # bind = $mainMod ALT, P, submap, passthru
