--- a/config/hypr/wallust/wallust-hyprland.conf
+++ b/config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(2C2B28)
-$foreground = rgb(C9D3D5)
-$color0 = rgb(51504D)
-$color1 = rgb(222116)
-$color2 = rgb(262E29)
-$color3 = rgb(2F545B)
-$color4 = rgb(5F4D3E)
-$color5 = rgb(30575F)
-$color6 = rgb(4B6166)
-$color7 = rgb(A9B8BB)
-$color8 = rgb(768083)
-$color9 = rgb(2E2B1E)
-$color10 = rgb(323E36)
-$color11 = rgb(3F6F79)
-$color12 = rgb(7F6753)
-$color13 = rgb(40747F)
-$color14 = rgb(648188)
-$color15 = rgb(A9B8BB)
+$background = rgb(070000)
+$foreground = rgb(FCECD3)
+$color0 = rgb(070000)
+$color1 = rgb(342326)
+$color2 = rgb(0D330D)
+$color3 = rgb(A15028)
+$color4 = rgb(2F768B)
+$color5 = rgb(499A93)
+$color6 = rgb(B99862)
+$color7 = rgb(F3DCB8)
+$color8 = rgb(AA9A81)
+$color9 = rgb(462E32)
+$color10 = rgb(114411)
+$color11 = rgb(D76A36)
+$color12 = rgb(3E9DB9)
+$color13 = rgb(61CDC4)
+$color14 = rgb(F7CA82)
+$color15 = rgb(F3DCB8)
