--- a/config/hypr/hypridle.conf
+++ b/config/hypr/hypridle.conf
@@ -22,8 +22,8 @@ general {
 # Warn
 listener {
     timeout = 540                            # 9 min
-    on-timeout = notify-send "  You are idle!" # command to run when timeout has passed
-    on-resume = notify-send "  Welcome back!"  # command to run when activity is detected after timeout has fired.
+    on-timeout = notify-send "  Attention ça va vérouiller !" # command to run when timeout has passed
+    # on-resume = notify-send "  Welcome back!"  # command to run when activity is detected after timeout has fired.
 }
 
 # Screenlock
